--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Material Avatar Maker</title>
 
     <!-- style -->
@@ -448,7 +449,7 @@
     </div>
 	<br><br>
 <center><a href="javascript:;" onclick="wholePage();" class="btn btn-success">Download Image</a>
-<br><br><br><p style="color:red";><b>Note: Currently Download Image is Malfunctioning ;___;</b></p><br><p><strong>Please Take ScreenShot Of Your Avatar :)</strong></p></center>
+<br><br><button onclick="window.location.href = 'https://github.com/rushiranpise/MyMAM/blob/master/README.md';">Guide</button><br><p style="color:red";><b>Note: Currently Download Image is Malfunctioning ;___;</b></p><br><p><strong>Please Take ScreenShot Of Your Avatar :)</strong></p></center>
 <script type="text/javascript">
 function wholePage()
 {
