--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
     </div>
 	<br><br>
 <center><a href="javascript:;" onclick="wholePage();" class="btn btn-success">Download Image</a>
-<br><br><button onclick="window.location.href = 'https://github.com/rushiranpise/MyMAM/blob/master/README.md';">Guide</button><br><p style="color:red";><b>Note: Currently Download Image is Malfunctioning ;___;</b></p><br><p><strong>Please Take ScreenShot Of Your Avatar :)</strong></p></center>
+<br><br><a href="https://github.com/rushiranpise/MyMAM/blob/master/README.md"><button>Guide</button></a><br><br><br><p style="color:red";><b>Note: Currently Download Image is Malfunctioning ;___;</b></p><br><p><strong>Please Take ScreenShot Of Your Avatar :)</strong></p></center>
 <script type="text/javascript">
 function wholePage()
 {
