--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
       </div>
     </div>
 	<br><br>
-<center><a href="javascript:;" onclick="wholePage();" class="btn btn-success">Download Image</a>
+<center><a href="javascript:;" onclick="wholePage();" class="btn btn-success">Download Image</a></center><center>
 <br><br><div onclick="location.href='https://github.com/rushiranpise/MyMAM/blob/master/README.md';" id="smallbox">Guide</div><br><br><br><p style="color:red";><b>Note: Currently Download Image is Malfunctioning ;___;</b></p><br><p><strong>Please Take ScreenShot Of Your Avatar :)</strong></p></center>
 <script type="text/javascript">
 function wholePage()
