--- a/index.html
+++ b/index.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" media="screen" href="styles/game_page_css.css">
+    <script defer src="scripts/game_page_js.js"></script>
+    <script src="https://kit.fontawesome.com/cbe45b2480.js" crossorigin="anonymous"></script>
     <title>My Material Avatar Maker</title>
-
     <!-- style -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
 
   </head>
+
   <body>
+    <div id="page-wrapper">
+        <div id="page-canvas">
+          <header class="clearfix">
+            <nav>
+              <ul>
+                <li><a class="nav" href="index.html">HOME</a></li>
+                <li><a class="nav" href="https://github.com/rushiranpise/MyMAM/blob/master/README.md">Guide</a></li>
+                <li><a class="nav" href="https://rushiranpise.github.io">ABOUT</a></li>
+              </ul>
+            </nav>
+            <div class="header">
+            <a href="#" class="toggleTrigger">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </a>
+              <h2 id="logo"> <a href="index.html">My Material Avatar Maker</a> </h2>
+              <!-- TOP BUTTON DOWNLOAD ICON -->
+              <i class="fas fa-arrow-alt-circle-down fa-2x" class="btn btn-success" id="top-btn"></i>
+            </div>
+          </header>
+          
     <div id="avatar">
       <svg id="hair_back" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="360px" height="360px" viewBox="0 0 360 360" E="xMidYMid meet">
         <polygon id="background" fill="#ffffff" points="-180,-150, 540,-150 540,450 -180,450"/>
@@ -405,7 +430,7 @@
             <div id="menu3" style="bottom:34px;"></div>
             <span style='position:absolute; bottom:0px;'>Menu</span>
           </div>
-          <br><br><br><br><br><br><br>
+          <br><br><br><br><br><br>
           <div id="menu_list">
             <h3>To Continue</h3>
             <h3>Select Item</h3>
@@ -449,7 +474,13 @@
     </div>
 	<br><br>
 <center><a href="javascript:;" onclick="wholePage();" class="btn btn-success">Download Image</a></center><center>
-<br><br><div onclick="location.href='README.md';" id="smallbox">Guide</div><br><br><br><p style="color:red";><b>Note: Currently Download Image is Malfunctioning ;___;</b></p><br><p><strong>Please Take ScreenShot Of Your Avatar :)</strong></p></center>
+<br><br>
+<center>
+<a href="https://github.com/rushiranpise/MyMAM/blob/master/README.md" style="z-index:5" class="btn btn-danger">Guide</a>
+</center>
+<center><br><br><br><p style="color:red";><b>Note: Currently Download Image</b></p><p style="color:red";><b>
+   is Malfunctioning ;___;</b></p><br><p><strong>Please Take ScreenShot Of Your Avatar :)</strong></p></center>
+</center>
 <script type="text/javascript">
 function wholePage()
 {
@@ -473,7 +504,8 @@ function wholePage()
 <script type="text/javascript" src="js/main.js"></script>
 <br><br><br><br>
 <footer>
-  <center><text align="bottom"><b>
+  <center>
+    <text align="bottom"><b>
   Made with  by ❤️ Rushi.</b></text></center>
 </footer>
 </body>
