--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ function wholePage()
 <footer>
   <center>
     <text align="bottom"><b>
-  Made with  by ❤️ Rushi.</b></text></center>
+  Made with ❤️ by Rushi.</b></text></center>
 </footer>
 </body>
 </html>
